# zephyrDock

./: README.md  flight_pid_review.py  historical_data_analysis.py  lackzflight_pid_review.py  old_historical_data_analysis.py
Arduino (For Ultrasonic Sensor)/gyus42v2_address_change/: gyus42v2_address_change.ino
Arduino (For Ultrasonic Sensor)/gyus42v2_dual_reading_test/: gyus42v2_dual_reading_test.ino
Arduino (For Ultrasonic Sensor)/i2c_scan/: i2c_scan.ino
calcam/: calcam (bnw) raw  calcam (color) raw  calcam_bnw.yaml  calcam_color.yaml
logs/: odometry_20250403_024114.csv  odometry_lidar_20250403_135935.csv  odometry_lidar_20250403_135956.csv  odometry_lidar_20250403_140405.csv  odometry_lidar_20250403_141206.csv  odometry_lidar_20250403_150105.csv  odometry_lidar_20250403_150342.csv  odometry_lidar_20250403_151813.csv  odometry_lidar_20250404_121100.csv  odometry_lidar_20250404_121150.csv  odometry_lidar_20250404_121242.csv  odometry_lidar_20250404_124722.csv  odometry_lidar_20250404_124805.csv  odometry_lidar_20250404_131829.csv  odometry_lidar_20250404_131848.csv  odometry_lidar_20250404_132153.csv  odometry_lidar_20250404_214535.csv  odometry_lidar_20250405_122109.csv  odometry_lidar_20250405_122144.csv  odometry_lidar_20250405_122802.csv  odometry_lidar_20250405_125235.csv  odometry_lidar_20250405_125324.csv  odometry_lidar_20250405_125557.csv  odometry_lidar_20250405_125902.csv  odometry_lidar_20250405_130500.csv  odometry_lidar_20250405_130834.csv  odometry_lidar_20250405_135247.csv  odometry_lidar_20250405_141505.csv  odometry_lidar_20250405_141714.csv  odometry_lidar_20250405_141901.csv  pid_log_20250408_145522.csv  pid_log_20250415_113757.csv  pid_log_20250415_124804.csv  pid_log_20250415_130706.csv  pid_log_20250415_142114.csv  pid_log_20250415_150721.csv  pid_log_20250415_160421.csv  pid_log_20250416_142422.csv  pid_log_20250416_160128.csv  pid_log_20250416_160409.csv  (+54 more)
some guide (from chua jun yan)/: algorithm design  algorithm flow  command used for px4  github guide
src/aruco_tracker/: ArucoTracker(actual).cpp  ArucoTracker.cpp  ArucoTracker.hpp  package.xml
src/aruco_tracker/cfg/: params.yaml
src/aruco_tracker/launch/: aruco_tracker.launch.py
src/image_transport_plugins/compressed_depth_image_transport/src/: compressed_depth_publisher.cpp
src/image_transport_plugins/compressed_image_transport/src/: compressed_publisher.cpp  compressed_subscriber.cpp
src/image_transport_plugins/theora_image_transport/include/theora_image_transport/: theora_publisher.h
src/image_transport_plugins/theora_image_transport/src/: theora_subscriber.cpp
src/precision_land/: CMakeLists.txt  PrecisionLand (actual).cpp  PrecisionLand (actual).hpp  PrecisionLand (land).cpp  PrecisionLand (old hover).cpp  PrecisionLand copy.cpp  PrecisionLand copy.hpp  PrecisionLand(mode).cpp  PrecisionLand(test.cpp  PrecisionLand(test.hpp  PrecisionLand.cpp  PrecisionLand.hpp  PrecisionLand_copy.cpp  PrecisionLand_initial.hpp  package.xml
src/precision_land/cfg/: params.yaml
src/precision_land/launch/: precision_land.launch.py
src/precision_land_test/: CMakeLists.txt  package.xml
src/precision_land_test/include/precision_land_test/: precision_land_test.hpp
src/precision_land_test/src/: main.cpp  precision_land_test.cpp
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/launch/: MAIN_offboard_velocity_control.launch.py
src/px4_offboard/px4_offboard/: visualizer.py
src/ros2_v4l2_camera/: CMakeLists.txt  package.xml
src/ros2_v4l2_camera/config/: calcam_bnw.yaml  calcam_color.yaml
src/ros2_v4l2_camera/launch/: raw_camera.launch.py
src/ros2_v4l2_camera/src/: v4l2_camera.cpp
src/sensor_interface/: package.xml  setup.py
src/sensor_interface/sensor_interface/: lidar.py  ultrasonic_dual_node.py
src/your_servo_control/: package.xml  setup.cfg  setup.py
src/your_servo_control/launch/: servo_control_launch.py
src/your_servo_control/your_servo_control/: servo_controller.py
src/zd_px4_comm/: package.xml  setup.cfg  setup.py
src/zd_px4_comm/launch/: MAIN_zd_launch.py
src/zd_px4_comm/zd_px4_comm/: james.py  zd_logging.py  zd_processes(actual).py  zd_processes.py  zd_processes_actual.py  zd_px4_calibration.py  zd_px4_comm (actual).py  zd_px4_comm (new).py  zd_px4_comm (ori z).py  zd_px4_comm actual.py  zd_px4_comm copy.py  zd_px4_comm.py  zd_px4_comm_actual.py  zd_px4_comm_sim.py
