<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_offboard</name>
  <version>0.0.0</version>
  <description>ROS2 PX4 Interface with Precision Landing</description>
  <maintainer email="braden@arkelectron.com">braden</maintainer>
  <license>BSD-3</license>

  <!-- Dependencies -->
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <!-- ROS 2 Dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_python</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
